dataset1235/2025-2/1153765216/users/641768463/executions/3138746197_2149359571.log
== SUBMISSION (2025-08-19 18:15:37)
-- CODE: 
numero = resultado
90 - 55 = 35
print (numero)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 2
    90 - 55 = 35
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 2
    90 - 55 = 35
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:16:10)
-- CODE: 
numero = resultado
90 - 55 = 35
print (35) numero
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 2
    90 - 55 = 35
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 2
    90 - 55 = 35
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:21:41)
-- CODE: 
Resultado = 90 - 55
print (Resultado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 18:15:56)
-- CODE: 
numero = resultado
90 - 55 = 35
print ('numero')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 2
    90 - 55 = 35
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 2
    90 - 55 = 35
    ^^^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
